# mangalike

./: Cargo.toml  README.md
src/: main.rs  manga_list.rs  methods.rs  scraper.rs  selectors.rs  structs.rs  utils.rs
src/manga_list/: mod.rs
src/scraper/: mod.rs
