[package]
name = "mangalike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.2"
color-eyre = "0.6.2"
epub-builder = "0.5.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
scraper = "0.16.0"
